[package]
name = "ssd1306"
description = "A platform agnostic driver for SSD1306 oled display driver"
authors = ["Nathan Scowcroft <nate.scowcroft@edgewaterautomation.com>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal-driver", "oled"]
license = "MIT OR Apache-2.0"
version = "0.1.0"

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
lto = true
debug = true

[dependencies]
embedded-hal = "0.1.2"

[dev-dependencies]
cortex-m = "0.4.3"
f3 = { version = "0.5.3", features = ["rt"] }
cortex-m-rt = { version = "0.3.13", features = ["abort-on-panic"] }
cortex-m-semihosting = "0.2.0"
